taskCard traduction, fixed money amount alignment in TaskCard & AppCard

--- a/src/handlers/nelpcenter/ApplicationCardView.scss
+++ b/src/handlers/nelpcenter/ApplicationCardView.scss
@@ -82,7 +82,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: 76px;
-    padding-top: 8px;
+    padding-top: 6px;
     height: 41px;
     padding-left: 6px;
     font-size: 1.2em;
